--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.5.0",
+    "@vercel/analytics": "^1.5.0",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
     "cors": "^2.8.5",
-    "passport": "^0.6.0",
-    "passport-google-oauth20": "^2.0.0",
+    "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "nodemailer": "^6.9.7"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.5.0",
+    "nodemailer": "^6.9.7",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
