--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@ jspm_packages/
 
 # dotenv environment variables file
 .env
+render-env-vars.txt
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
